<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="go_back">Назад</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">"Написать в поддержку"</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_developer_course_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_to">Поделиться ссылкой через</string>
    <string name="there_is_no_app">На вашем устройстве нет подходящего приложения.</string>
    <string name="developers_email" translatable="false">popovadariaa1111@gmail.com</string>
    <string name="subject_of_mail_to_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_of_mail_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="clear_text">Очистить поисковый запрос</string>
    <string name="go_to_track">Перейти к треку</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="no_preview_link">Отсутствует ссылка на превью</string>
    <string name="tab_name_favorites">Избранные треки</string>
    <string name="tab_name_playlists">Плейлисты</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="do_you_want_to_finish_creating_the_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="create">Создать</string>
    <string name="playlist_created_message">Плейлист %s создан</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %s</string>
    <string name="open_extra_menu">Открыть меню с дополнительными возможностями</string>
    <string name="share">Поделиться</string>
    <string name="edit_data">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <plurals name="duration_in_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>
    <string name="do_you_want_to_delete_the_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которыми можно поделиться</string>
    <string name="do_you_want_to_delete_the_playlist">Хотите удалить плейлист «%s»?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="do_you_want_to_finish_editing_the_playlist">Завершить редактирование плейлиста?</string>
    <string name="you_need_to_provide_permission">Предоставьте разрешение. Оно необходимо для фонового воспроизведения музыки.</string>


</resources>