<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    style="@style/VerticalLayout"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGoBack"
            style="@style/ButtonGoBack" />

        <TextView
            android:text="@string/search"
            style="@style/SectionTitle" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_background_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="start">

            <ImageView
                style="@style/SearchEditText"
                android:id="@+id/btnSearch"
                android:src="@drawable/ic_search_16"
                android:contentDescription="@string/search"
                android:layout_marginStart="12dp"/>

            <EditText
                android:id="@+id/editText"
                style="@style/SearchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8.5dp"
                android:layout_marginBottom="7.5dp"
                android:background="@null"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="start"
                android:hint="@string/search"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/plainText"
                android:layout_weight="1"
                tools:ignore="TouchTargetSizeCheck"

                android:imeOptions="actionDone"
                android:singleLine="true"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/clearIcon"
            android:src="@drawable/ic_close_16"
            android:visibility="gone"
            android:layout_gravity="center|end"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/clear_text"
            style="@style/SearchEditText"
            />

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/searchBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/search_history"
                android:text="@string/search_history"
                style="@style/SectionTitle"
                android:textSize="@dimen/bannerText"
                android:gravity="center"
                android:paddingTop="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:visibility="gone"/>

            <Button
                android:id="@+id/clear_search_history"
                style="@style/Button"
                android:text="@string/clear_search_history"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/nothingFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/bigIconSize"
            android:layout_height="@dimen/bigIconSize"
            android:src="@drawable/ic_nothing_found_120"
            android:scaleType="centerInside"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="@string/nothing_found"
            style="@style/TextBanner"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectionProblems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/bigIconSize"
            android:layout_height="@dimen/bigIconSize"
            android:src="@drawable/ic_connection_problems_120"
            android:scaleType="centerInside"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="@string/connection_problems"
            style="@style/TextBanner"/>

        <Button
            android:id="@+id/btn_update"
            style="@style/Button"
            android:text="@string/update"/>
    </LinearLayout>

</LinearLayout>

