<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/bottomsheetContentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bottomsheet"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:src="@drawable/line_bottomsheet"
            app:tint="?attr/colorSecondaryVariant"/>

        <include
            android:id="@+id/playlist_data"
            layout="@layout/add_to_playlist_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            style="@style/ExtraMenuText"
            android:id="@+id/share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_data"
            android:text="@string/share"/>

        <TextView
            style="@style/ExtraMenuText"
            android:id="@+id/edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share"
            android:text="@string/edit_data"/>

        <TextView
            style="@style/ExtraMenuText"
            android:id="@+id/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/delete_playlist"
            android:layout_marginBottom="70dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

