<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/YP_Blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/YP_White"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:gravity="start"
            android:textSize="@dimen/titleText"
            android:fontFamily="@font/ys_display_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="@dimen/btnMarginVertical"
            app:cornerRadius="@dimen/btnСornerRadius"
            android:backgroundTint="@color/YP_White"
            android:textColor="@color/YP_Black"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textSize="@dimen/titleText"
            android:fontFamily="@font/ys_display_medium"
            app:icon="@drawable/ic_search_24"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_Black"
            app:iconPadding="@dimen/btnIconPadding"
            android:foreground="?attr/selectableItemBackground"
            />

        <Button
            android:id="@+id/btnLibrary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="@dimen/btnMarginVertical"
            app:cornerRadius="@dimen/btnСornerRadius"
            android:backgroundTint="@color/YP_White"
            android:textColor="@color/YP_Black"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textSize="@dimen/titleText"
            android:fontFamily="@font/ys_display_medium"
            app:icon="@drawable/ic_library_24"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_Black"
            app:iconPadding="@dimen/btnIconPadding"
            android:foreground="?attr/selectableItemBackground"
            />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="@dimen/btnMarginVertical"
            app:cornerRadius="@dimen/btnСornerRadius"
            android:backgroundTint="@color/YP_White"
            android:textColor="@color/YP_Black"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textSize="@dimen/titleText"
            android:fontFamily="@font/ys_display_medium"
            app:icon="@drawable/ic_settings_24"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_Black"
            app:iconPadding="@dimen/btnIconPadding"
            android:foreground="?attr/selectableItemBackground"
            />

    </LinearLayout>

</LinearLayout>
